--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -9,12 +9,5 @@
   </li>
 </ul>
 
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
-<div *ngIf="selectedHero">
-<h2> {{ selectedHero.name | uppercase }} Details </h2>
-<div><span>id:</span>{{selectedHero.id}}</div>
-<div>
-  <label for="hero-name"> Heros Name: </label>
-  <input id="hero-name" type="text" [(ngModel)]="selectedHero.name" placeholder="name">
-</div>
-</div>
